--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Git and Github</h1>
     <h2>Easy to learn</h2>
     <h3>Learn commands of github</h3>
+    <h4>Git commands</h4>
   </body>
 </html>
